# KanziRenderPass

./: .gitignore  README.md
Application/: CMakeLists.txt  generate_cmake_vs2017_solution.bat  generate_cmake_vs2019_solution.bat
Application/src/: test.cpp
Tool_project/Shaders/: ColorTexture.frag.glsl  ColorTexture.vert.glsl  DefaultBlit.frag.glsl  DefaultBlit.vert.glsl  Depth.frag.glsl  FontDefault.frag.glsl  FontDefault.vert.glsl  MaskTexture.frag.glsl  MaskTexture.vert.glsl  PhysicallyBased.frag.glsl  PhysicallyBased.vert.glsl  SweepTextures.frag.glsl  SweepTextures.vert.glsl  Textured.frag.glsl  VertexPhong.vert.glsl  VertexPhongTexturedCube.frag.glsl
